terminando o ultimo exercício
Finalizando o ultimo exercício do curso JS Patrocinado pelo google do canal curso em vídeo

--- a/JS do Google/DESAFIOS/DESAFIO 5/modelo.html
+++ b/JS do Google/DESAFIOS/DESAFIO 5/modelo.html
@@ -4,22 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Analisador</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
 <body>
     <header id="h">
-        <h1>TITULO</h1>
+        <h1>Analisador de números</h1>
     </header>
    
     <section id="s">
         <div id="div1">
-
+            <p>Numero(entre 0 e 100): <input type="number" id='num'>
+            <input type="button" id='btn' value='Adcionar' onclick='Adcionar()'></p>
+            <p>
+                <select id="lista" size="5" multiple>
+            </select>
+            <p><input type="button" class='btnA' value="Analisar" onclick="Analisar()"></p>
+        </p>
         </div>
         <div id="div2">
             
         </div>
-        conteudo
+        
     </section>
     <footer id="f">
         &copy; OdairRos
