--- a/[RocketSeat]  Guia estelar HTML/Projetos/Tabela-ArquivosCurso/modelo.html
+++ b/[RocketSeat]  Guia estelar HTML/Projetos/Tabela-ArquivosCurso/modelo.html
@@ -11,9 +11,6 @@
         <thead>
             <caption>Navegador de arquivos </caption>
 
-            <colgroup>
-                <col style="background-color: rgb(0, 0, 0);">
-            </colgroup>
 
         </thead>
         <tbody>
@@ -23,12 +20,27 @@
             </tr>
             <tr>
                 <td >
-                    <a href="/Aulas/Aula 001/(001)Comentarios.html">Aula 001</a>
+                    <a href="/Aulas/Aula 001/(001)Comentarios.html" target="_blank">Aula 001</a>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <a href="/Aulas/Aula 002/(002)Anatomia-tags.html">Aula 002</a>
+                    <a href="/Aulas/Aula 002/(002)Anatomia-tags.html" target="_blank">Aula 002</a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="/Aulas/Aula 003/(003)Atributos.html" target="_blank">Aula 003</a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="/Aulas/Aula 004/(004)Atributos-globais.html" target="_blank">Aula 004</a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="/Aulas/Aula 005/(005)Aninhamento-de-tags.html" target="_blank">Aula 005</a>
                 </td>
             </tr>
         </tbody>
