--- a/[RocketSeat]  Guia estelar HTML/Projetos/Tabela-ArquivosCurso/modelo.html
+++ b/[RocketSeat]  Guia estelar HTML/Projetos/Tabela-ArquivosCurso/modelo.html
@@ -19,18 +19,27 @@
                 <th>Projetos</th>
             </tr>
             <tr>
-                <td >
+                <td>
                     <a href="/Aulas/Aula 001/(001)Comentarios.html" target="_blank">Aula 001</a>
+                </td>
+                <td>
+                    <a href="/Projetos/Explicando-Html/modelo.html" target="_blank">Explicando-Html</a>
                 </td>
             </tr>
             <tr>
                 <td>
                     <a href="/Aulas/Aula 002/(002)Anatomia-tags.html" target="_blank">Aula 002</a>
                 </td>
+                <td>
+                    <a href="/Projetos/Navegador de arquivos/index.html" target="_blank">Navegador de arquivos</a>
+                </td>
             </tr>
             <tr>
                 <td>
                     <a href="/Aulas/Aula 003/(003)Atributos.html" target="_blank">Aula 003</a>
+                </td>
+                <td>
+                    <a href="/Projetos/Tabela-ArquivosCurso/modelo.html" target="_blank">Tabela arquivos curso</a>
                 </td>
             </tr>
             <tr>
@@ -41,6 +50,180 @@
             <tr>
                 <td>
                     <a href="/Aulas/Aula 005/(005)Aninhamento-de-tags.html" target="_blank">Aula 005</a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="/Aulas/Aula 006/(006)Praticando.html" target="_blank">Aula 006</a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="/Aulas/Aula 007/(007)anatomia-document.html" target="_blank">Aula 007</a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="/Aulas/Aula 008/(008)caracteres-reservados.html" target="_blank">Aula 008</a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="/Aulas/Aula 009/(009)Semantica.html" target="_blank">Aula 009</a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="/Aulas/Aula 010/(010)Cabecalho-paragrafos.html" target="_blank">Aula 010</a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="/Aulas/Aula 011/(011)abreviacoes.html" target="_blank">Aula 011</a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="/Aulas/Aula 012/(012)citacoes.html" target="_blank">Aula 012</a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="/Aulas/Aula 013/(013)code-pre.html" target="_blank">Aula 013</a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="/Aulas/Aula 014/(014)destalhes de contato.html" target="_blank">Aula 014</a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="/Aulas/Aula 015/(015)listas.html" target="_blank">Aula 015</a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="/Aulas/Aula 016/(016)lista-de-descricao.html" target="_blank">Aula 016</a>
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    <a href="/Aulas/Aula 017/(017)elementos-genericos.html"target="_blank">Aula 017</a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <a href="/Aulas/Aula 018/(018)hiperlinks.html" target="_blank">Aula 018</a>
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    <a href="/Aulas/Aula 019/(019)hiperlinks.html" target="_blank">Aula 019</a>
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    <a href="/Aulas/Aula 020/(020)conteudo-a-element.html" target="_blank">Aula 020</a>
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    <a href="/Aulas/Aula 021/(021)conteudo-a-element.html" target="_blank">Aula 021</a>
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    <a href="/Aulas/Aula 022/(022)Urls-caminhos.html" target="_blank">Aula 022</a>
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    <a href="/Aulas/Aula 023/urls-caminhos.html" target="_blank">Aula 023</a>
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    <a href="/Aulas/Aula 024/(024)intro.html" target="_blank">Aula 024</a>
+                </td>
+            </tr>
+            
+            <tr>
+                <td>
+                    <a href="/Aulas/Aula 025/(025)table-basica.html" target="_blank">Aula 025</a>
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    <a href="/Aulas/Aula 026/table-head-body-foot.html" target="_blank">Aula 026</a>
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    <a href="/Aulas/Aula 027/table-complexa.html" target="_blank">Aula 027</a>
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    <a href="/Aulas/Aula 028/table-complexa.html" target="_blank">Aula 028</a>
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    <a href="/Aulas/Aula 029/table-complexa.html" target="_blank">Aula 029</a>
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    <a href="/Aulas/Aula 030/table-complexa.html" target="_blank">Aula 030</a>
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    <a href="/Aulas/Aula 031/table-complexa.html" target="_blank">Aula 031</a>
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    <a href="/Aulas/Aula 032/head.html" target="_blank">Aula 032</a>
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    <a href="/Aulas/Aula 033/meta.html" target="_blank">Aula 033</a>
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    <a href="/Aulas/Aula 034/Favicon.html" target="_blank">Aula 034</a>
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    <a href="/Aulas/Aula 035/meta-seo.html" target="_blank">Aula 035</a>
+                </td>
+            </tr>
+
+            <tr>
+                <td>
+                    <a href="/Aulas/Aula 036/meta-social.html" target="_blank">Aula 036</a>
                 </td>
             </tr>
         </tbody>
